:wrench: chore: add ruff and taskipy settings in pyproject file

--- a/basic-applications/fastapi-socket/pyproject.toml
+++ b/basic-applications/fastapi-socket/pyproject.toml
@@ -11,15 +11,23 @@ ruff = "^0.9.2"
 taskipy = "^1.14.1"
 fastapi = "^0.115.6"
 uvicorn = "^0.34.0"
+websockets = "^14.2"
 
 [tool.poetry.group.dev.dependencies]
 pydantic-settings = "^2.7.1"
 
 [tool.ruff]
+line-length = 79
+extende-exclude = ['model-output']
 
 [tool.ruff.lint]
+preview = true
+select = ['I', 'F', 'E', 'W', 'PL', 'PT']
 
 [tool.taskipy.tasks]
+lint = 'ruff check . ; ruff check . --diff'
+format = 'ruff check . --fix; ruff format .'
+run = 'uvicorn main:app'
 
 
 [build-system]
